# photonic-entanglement-characterization

./: .gitignore  AGENTS.md  Bell_PreLab-Final.ipynb  LICENSE.txt  PostLabDraft3.3.ipynb  Post_Lab-Tomography-FinalFinal.ipynb  README.md  pec_formal_demos.ipynb  pyproject.toml
docs/: project-guide.md
notebooks/: README.md  photonic_entanglement_characterization_workflow.ipynb  qutip_validation.ipynb
src/pec/: __init__.py  bell.py  chsh.py  io.py  metrics.py  mle.py  plotting.py  qutip_tools.py  states.py  tomography.py  waveplates.py
tests/: conftest.py  test_bell.py  test_chsh.py  test_imports.py  test_io.py  test_metrics.py  test_mle.py  test_plotting.py  test_public_api.py  test_qutip_tools.py  test_states.py  test_tomography.py  test_waveplates.py
